dash board scrolling issue fixed and spacing issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-category.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-category.less
@@ -1,2 +1,18 @@
-﻿body {
+﻿.panel-heading {
+    position: relative;
+}
+
+.heading {
+    display: inline;
+}
+
+.dash-panel {
+    margin-top: 130px;
+    font-family: 'myriadpro-regular';
+}
+
+.profile-rightmenu {
+    h3 {
+        padding-top: 3px;
+    }
 }
