--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.css
@@ -1,13 +1,2 @@
-﻿.panel-heading {
-    position: relative;
-}
-
-.heading {
-    display: inline;
-}
-
-.dash-panel {
-    margin-top: 130px;
-    font-family: 'myriadpro-regular';
-}
+﻿
 
